data/derived/sp14/progs/unify/prog4640.ml.out
Characters 124-136:
  else if r=3 then buildSine(build(r,d))
                            ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
